<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp">


    <EditText
        android:id="@+id/ip_address"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/ip_adress_text"
        android:inputType="number"
        android:layout_gravity="center"
        android:digits="1234567890."/>

    <EditText
        android:id="@+id/port_number"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="number"
        android:text="@string/port_number_text"/>

    <Button
        android:id="@+id/setting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:text="@string/setting"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TEST_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:text="TEST"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sending_message"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/sending_message" />

            <Button
                android:id="@+id/send_button"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/send" />

        </LinearLayout>

        <TextView
            android:id="@+id/recieved_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/message"/>

    </LinearLayout>


</LinearLayout>